--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,10 +11,12 @@
     <script>
       try {
         if (typeof Node !== 'undefined') {
-          const desc = Object.getOwnPropertyDescriptor(Node.prototype, 'firstChild');
-          if (!desc) {
+          const descriptor = Object.getOwnPropertyDescriptor(Node.prototype, 'firstChild');
+          if (!descriptor) {
             Object.defineProperty(Node.prototype, 'firstChild', {
-              get() { return this.childNodes && this.childNodes[0] || null; },
+              get() {
+                return this.childNodes && this.childNodes[0] || null;
+              },
               configurable: true
             });
           }
